# VINS-Fusion-gpu

./: .gitignore  README.md
camera_models/: CMakeLists.txt
camera_models/include/camodocal/camera_models/: Camera.h  PolyFisheyeCamera.h
camera_models/include/camodocal/code_utils/: cv_utils.h  eigen_utils.h  ros_utils.h  sys_utils.h
camera_models/include/camodocal/code_utils/math_utils/: Polynomial.h  math_utils.h
camera_models/src/camera_models/: Camera.cc  CameraFactory.cc  PolyFisheyeCamera.cc
camera_models/src/code_utils/: cv_utils.cc  poly_test.cpp
camera_models/src/code_utils/math_utils/: Polynomial.cpp
config/: vins_rviz_config.rviz
config/A3_ptgrey/: a3_ptgrey_stereo_imu_config.yaml
config/euroc/: euroc_stereo_imu_config.yaml
config/fisheye_front_stereo/: fisheye.yaml  fisheye_front.yaml  fisheye_top.yaml  top.yaml  up.yaml
config/fisheye_ptgrey_n3/: depth.yaml  depth_cpu.yaml  down.yaml  fisheye.yaml  fisheye_front.yaml  fisheye_top.yaml  fisheye_vworks.yaml  front.yaml  front_depth.yaml  left_depth.yaml  right_depth.yaml  up.yaml
config/mini_mynteye_stereo/: left.yaml  mini_mynteye_stereo_imu.yaml  right.yaml
config/mynteye/: mynteye_stereo_imu_raw_config.yaml
config/n3_bluefox/: backup.yaml  left.yaml  n3_bluefox_mono_imu_config.yaml  n3_bluefox_stereo_imu_config.yaml  right.yaml
config/realsense/: realsense_n3_unsync.yaml  right.yaml
config/vi_car/: vi_car.yaml
loop_fusion/: CMakeLists.txt
loop_fusion/src/: keyframe.cpp
vins_estimator/: CMakeLists.txt  nodelet_plugins.xml  package.xml
vins_estimator/include/vins/: VIOKeyframe.h
vins_estimator/launch/: fisheye.launch  fisheye_split.launch  nodelet_fisheye.launch  nodelet_fisheye_cpu.launch  nodelet_realsense_full.launch
vins_estimator/msg/: FlattenImages.msg  VIOKeyframe.msg
vins_estimator/src/: flattenNodelet.cpp  rosNodeTest.cpp  rosNodelet.cpp
vins_estimator/src/depth_generation/: color_disparity_graph.cpp  color_disparity_graph.hpp  depth_camera_manager.cpp  depth_camera_manager.h  depth_estimator.cpp  depth_estimator.h  stereo_matching.cpp  stereo_matching.hpp  stereo_online_calib.cpp  stereo_online_calib.hpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: projectionOneFrameTwoCamFactor.cpp  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.cpp  projectionTwoFrameTwoCamFactor.h
vins_estimator/src/featureTracker/: depth_camera_manager.h  depth_estimator.cpp  depth_estimator.h  feature_tracker.cpp  feature_tracker.h  fisheye_undist.hpp  ovx_replaceheader.hpp  vworks_feature_tracker.cpp  vworks_feature_tracker.hpp
vins_estimator/src/initial/: initial_alignment.h
vins_estimator/src/utility/: opencv_cuda.h  utility.h  visualization.cpp  visualization.h
