<?xml version="1.0"?>
<package>
  <name>vins</name>
  <version>0.0.0</version>
  <description>The vins package for fisheye</description>

  <maintainer email="xuhao3e8@gmail.com">xuhao3e8</maintainer>


  <license>GPLv3</license>



  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_filters</build_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>vins_nodelet_pkg</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>vins_nodelet_pkg</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
 <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
